Fixes #1847: Add missing messages to _ru files. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2299 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -10,6 +10,8 @@ April = April
 
 Archive_CRF_Version = Archive CRF Version
 
+allowDynamicGroupsManagement = Allow Dynamic Groups Management
+
 August = August
 
 auto_removed = auto-removed
@@ -1466,6 +1468,8 @@ none = None
 
 not_equal_to = not equal to
 
+not_closed =  Not Closed
+
 not_saved = not in DB yet
 
 not_scheduled = not scheduled
@@ -2805,11 +2809,11 @@ sdv_required_percent_complete = SDV Required % Complete
 select_all_on_page = Select All On The Page
 complete = complete
 send_email_on = Send Email on CRF
+send_email_when = Send Email when CRF is
 email_crf_to = Email To
 create_site_properties = Create Site Properties
 set_study_status =  Set Study Status
 save_status = Save Status
-
 # Added for New Navigation Bar
 nav_change_study_site = Change Study/Site
 nav_log_out = Log Out
@@ -3671,3 +3675,6 @@ search = Search
 ready_for_evaluation = Ready for Evaluation
 evaluation_completed = Evaluation Completed
 evaluation_status = Evaluation Status
+
+data_entry_quality = Data Entry Quality
+crf_data_evaluation = CRF data evaluation
