--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -10,6 +10,9 @@ And  = \u0438
 #April  =  April
 #April  = Апрель
 April  = \u0410\u043f\u0440\u0435\u043b\u044c
+#allowDynamicGroupsManagement = Allow Dynamic Groups Management
+#allowDynamicGroupsManagement = Разрешить управление динамическими группами
+allowDynamicGroupsManagement = \u0420\u0430\u0437\u0440\u0435\u0448\u0438\u0442\u044C \u0443\u043F\u0440\u0430\u0432\u043B\u0435\u043D\u0438\u0435 \u0434\u0438\u043D\u0430\u043C\u0438\u0447\u0435\u0441\u043A\u0438\u043C\u0438 \u0433\u0440\u0443\u043F\u043F\u0430\u043C\u0438
 #Archive_CRF_Version  =  Archive CRF Version
 #Archive_CRF_Version  = Архивировать версию ИРК
 Archive_CRF_Version  = \u0410\u0440\u0445\u0438\u0432\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0432\u0435\u0440\u0441\u0438\u044e \u0418\u0420\u041a
@@ -520,6 +523,9 @@ back_to_group_class_list  = \u041d\u0430\u0437\u0430\u0434 \u043a \u0441\u043f\u
 #begin_data_entry  =  Begin data entry
 #begin_data_entry  = Начать ввод данных
 begin_data_entry  = \u041d\u0430\u0447\u0430\u0442\u044c \u0432\u0432\u043e\u0434 \u0434\u0430\u043d\u043d\u044b\u0445
+#begin_crf_evaluation = Begin Crf Evaluation
+#begin_crf_evaluation = Начать оценку ИРК
+begin_crf_evaluation = \u041D\u0430\u0447\u0430\u0442\u044C \u043E\u0446\u0435\u043D\u043A\u0443 \u0418\u0420\u041A
 #begin_double_data_entry  =  Begin Double Data Entry
 #begin_double_data_entry  = Начать двойной ввод данных
 begin_double_data_entry  = \u041d\u0430\u0447\u0430\u0442\u044c \u0434\u0432\u043e\u0439\u043d\u043e\u0439 \u0432\u0432\u043e\u0434 \u0434\u0430\u043d\u043d\u044b\u0445
@@ -1489,7 +1495,7 @@ event_ID  = \u0049\u0044 \u0441\u043e\u0431\u044b\u0442\u0438\u044f
 #event_attributes  =  Event Attributes
 #event_attributes  = Атрибуты события
 event_attributes  = \u0410\u0442\u0440\u0438\u0431\u0443\u0442\u044b \u0441\u043e\u0431\u044b\u0442\u0438\u044f
-##added for SDV views = 
+##added for SDV views =
 ##added for SDV views = 
 #added for SDV views = 
 #event_crf  =  Event CRF
@@ -3340,7 +3346,7 @@ subtitle = \u041f\u043e\u0434\u0437\u0430\u0433\u043e\u043b\u043e\u0432\u043e\u0
 summary_statistics = \u0410\u0433\u0440\u0435\u0433\u0430\u0442\u043d\u0430\u044f \u0441\u0442\u0430\u0442\u0438\u0441\u0442\u0438\u043a\u0430
 #sure_to_cancel =  Are you sure you want to Cancel? Select the Yes button if you would like to cancel the transaction. Select the No button if you would like to remain on the page.
 #sure_to_cancel = Вы уверены, что хотите отменить? Нажмите кнопку ""ОК"" если вы хотите отменить действие. Нажмите на кнопку ""Отмена"" если хотите остаться на этой странице."
-sure_to_cancel = \u0022\u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b\u002c \u0447\u0442\u043e \u0445\u043e\u0442\u0438\u0442\u0435 \u043e\u0442\u043c\u0435\u043d\u0438\u0442\u044c\u003f \u041d\u0430\u0436\u043c\u0438\u0442\u0435 \u043a\u043d\u043e\u043f\u043a\u0443 \u0022\u0022\u041e\u041a\u0022\u0022 \u0435\u0441\u043b\u0438 \u0432\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u043e\u0442\u043c\u0435\u043d\u0438\u0442\u044c \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0435\u002e \u041d\u0430\u0436\u043c\u0438\u0442\u0435 \u043d\u0430 \u043a\u043d\u043e\u043f\u043a\u0443 \u0022\u0022\u041e\u0442\u043c\u0435\u043d\u0430\u0022\u0022 \u0435\u0441\u043b\u0438 \u0445\u043e\u0442\u0438\u0442\u0435 \u043e\u0441\u0442\u0430\u0442\u044c\u0441\u044f \u043d\u0430 \u044d\u0442\u043e\u0439 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435\u002e\u0022
+sure_to_cancel = \u0412\u044b \u0443\u0432\u0435\u0440\u0435\u043d\u044b\u002c \u0447\u0442\u043e \u0445\u043e\u0442\u0438\u0442\u0435 \u043e\u0442\u043c\u0435\u043d\u0438\u0442\u044c\u003f \u041d\u0430\u0436\u043c\u0438\u0442\u0435 \u043a\u043d\u043e\u043f\u043a\u0443 \u041e\u041a \u0435\u0441\u043b\u0438 \u0432\u044b \u0445\u043e\u0442\u0438\u0442\u0435 \u043e\u0442\u043c\u0435\u043d\u0438\u0442\u044c \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0435\u002e \u041d\u0430\u0436\u043c\u0438\u0442\u0435 \u043d\u0430 \u043a\u043d\u043e\u043f\u043a\u0443 \u041e\u0442\u043c\u0435\u043d\u0430 \u0435\u0441\u043b\u0438 \u0445\u043e\u0442\u0438\u0442\u0435 \u043e\u0441\u0442\u0430\u0442\u044c\u0441\u044f \u043d\u0430 \u044d\u0442\u043e\u0439 \u0441\u0442\u0440\u0430\u043d\u0438\u0446\u0435\u002e
 #sure_to_sign_subject =  Enter your user name and password below to signify agreement with the following statement:
 #sure_to_sign_subject = Чтобы подписаться под нижеизложенным, пожалуйста введите ваше имя и пароль:
 sure_to_sign_subject = \u0427\u0442\u043e\u0431\u044b \u043f\u043e\u0434\u043f\u0438\u0441\u0430\u0442\u044c\u0441\u044f \u043f\u043e\u0434 \u043d\u0438\u0436\u0435\u0438\u0437\u043b\u043e\u0436\u0435\u043d\u043d\u044b\u043c\u002c \u043f\u043e\u0436\u0430\u043b\u0443\u0439\u0441\u0442\u0430 \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u0432\u0430\u0448\u0435 \u0438\u043c\u044f \u0438 \u043f\u0430\u0440\u043e\u043b\u044c\u003a
@@ -4373,6 +4379,9 @@ complete = \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043d\u043e
 #send_email_on =  Send Email on CRF
 #send_email_on = Оправить email по ИРК
 send_email_on = \u041e\u043f\u0440\u0430\u0432\u0438\u0442\u044c \u0065\u006d\u0061\u0069\u006c \u043f\u043e \u0418\u0420\u041a
+#send_email_when = Send Email when CRF is
+#send_email_when = Отправить Email когда ИРК
+send_email_when = \u041E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C Email \u043A\u043E\u0433\u0434\u0430 \u0418\u0420\u041A
 #email_crf_to =  Email To
 #email_crf_to = Отправить email
 email_crf_to = \u041e\u0442\u043f\u0440\u0430\u0432\u0438\u0442\u044c \u0065\u006d\u0061\u0069\u006c
@@ -4499,6 +4508,9 @@ nav_update_profile = \u041e\u0431\u043d\u043e\u0432\u0438\u0442\u044c \u043f\u04
 #nav_view_study =  View Study
 #nav_view_study = Просмотр исследования
 nav_view_study = \u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0438\u0441\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u043d\u0438\u044f
+#not_closed =  Not Closed
+#not_closed = Не закрыто
+not_closed = \u041d\u0435 \u0437\u0430\u043a\u0440\u044b\u0442\u043e
 #design =  Design
 #design = Дизайн
 design = \u0414\u0438\u0437\u0430\u0439\u043d
@@ -5614,6 +5626,10 @@ coding_progress_widget_header = \u041a\u043e\u0434\u0438\u0440\u043e\u0432\u0430
 #evaluation_progress_widget_header = CRFs Evaluation Progress
 #evaluation_progress_widget_header = Прогресс оценки ИРК
 evaluation_progress_widget_header = \u041F\u0440\u043E\u0433\u0440\u0435\u0441\u0441 \u043E\u0446\u0435\u043D\u043A\u0438 \u0418\u0420\u041A
+#enrollment_status_ps_widget_header = Enrollment Status Per Site
+#enrollment_status_ps_widget_header = Включение собьектов по сайтам
+enrollment_status_ps_widget_header = \u0412\u043A\u043B\u044E\u0447\u0435\u043D\u0438\u0435 \u0441\u043E\u0431\u044C\u0435\u043A\u0442\u043E\u0432 \u043F\u043E \u0441\u0430\u0439\u0442\u0430\u043C
+
 # widgets description
 #sdv_widget_description =  SDV Progress.
 #sdv_widget_description = SDV
@@ -5627,9 +5643,7 @@ enrollment_progress_widget_description = \u0412\u043a\u043b\u044e\u0447\u0435\u0
 #coding_progress_widget_description =  Coding progress.
 #coding_progress_widget_description = Кодирование.
 coding_progress_widget_description = \u041a\u043e\u0434\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435\u002e
-## toolbar header = 
-## toolbar header = 
-# toolbar header = 
+# toolbar header
 #available_widgets =  Available Widgets
 #available_widgets = Доступные виджеты
 available_widgets = \u0414\u043e\u0441\u0442\u0443\u043f\u043d\u044b\u0435 \u0432\u0438\u0434\u0436\u0435\u0442\u044b
@@ -6021,6 +6035,9 @@ systemProperty.themeColor.green.radioLabel = \u0417\u0435\u043b\u0435\u043d\u043
 #systemProperty.themeColor.violet.radioLabel = Violet
 #systemProperty.themeColor.violet.radioLabel = Фиолетовая
 systemProperty.themeColor.violet.radioLabel = \u0424\u0438\u043e\u043b\u0435\u0442\u043e\u0432\u0430\u044f
+#systemProperty.themeColor.darkBlue.radioLabel = Dark Blue
+#systemProperty.themeColor.darkBlue.radioLabel = Темно Синяя
+systemProperty.themeColor.darkBlue.radioLabel = \u0422\u0451\u043C\u043D\u043E \u0421\u0438\u043D\u044F\u044F
 #systemProperty.instanceType.label = Instance type
 #systemProperty.instanceType.label = Тип представления
 systemProperty.instanceType.label = \u0422\u0438\u043f \u043f\u0440\u0435\u0434\u0441\u0442\u0430\u0432\u043b\u0435\u043d\u0438\u044f
@@ -6632,6 +6649,12 @@ crfEvaluationTable.crfStatus = \u0421\u0442\u0430\u0442\u0443\u0441 \u0418\u0420
 #crfEvaluationTable.actionColumn = Actions
 #crfEvaluationTable.actionColumn = Действия
 crfEvaluationTable.actionColumn = \u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044f
+#crf_eval_rfc_description=CRF Evaluation Data Change
+#crf_eval_rfc_description=Данные изменены в ходе оценки ИРК
+crf_eval_rfc_description=\u0414\u0430\u043D\u043D\u044B\u0435 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u044B \u0432 \u0445\u043E\u0434\u0435 \u043E\u0446\u0435\u043D\u043A\u0438 \u0418\u0420\u041A
+#crf_eval_rfc_detailed_description=This note was automatically generated due to a field data change during CRF Evaluation.
+#crf_eval_rfc_detailed_description=Эта заметка была автоматически сгенерированная в связи с изменением выделенных значений во время Оценки ИРК.
+crf_eval_rfc_detailed_description=\u042D\u0442\u0430 \u0437\u0430\u043C\u0435\u0442\u043A\u0430 \u0431\u044B\u043B\u0430 \u0430\u0432\u0442\u043E\u043C\u0430\u0442\u0438\u0447\u0435\u0441\u043A\u0438 \u0441\u0433\u0435\u043D\u0435\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u043D\u0430\u044F \u0432 \u0441\u0432\u044F\u0437\u0438 \u0441 \u0438\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0435\u043C \u0432\u044B\u0434\u0435\u043B\u0435\u043D\u043D\u044B\u0445 \u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0439 \u0432\u043E \u0432\u0440\u0435\u043C\u044F \u041E\u0446\u0435\u043D\u043A\u0438 \u0418\u0420\u041A.
 
 #ready_for_evaluation = Ready for Evaluation
 #ready_for_evaluation = Готовы к оценке
@@ -6642,3 +6665,9 @@ evaluation_completed = \u041E\u0446\u0435\u043D\u043A\u0430 \u0437\u0430\u0432\u
 #evaluation_status = Evaluation Status
 #evaluation_status = Статус оценки
 evaluation_status = \u0421\u0442\u0430\u0442\u0443\u0441 \u043E\u0446\u0435\u043D\u043A\u0438
+#data_entry_quality = Data Entry Quality
+#data_entry_quality = Качество ввода данных
+data_entry_quality = \u041A\u0430\u0447\u0435\u0441\u0442\u0432\u043E \u0432\u0432\u043E\u0434\u0430 \u0434\u0430\u043D\u043D\u044B\u0445
+#crf_data_evaluation = CRF data evaluation
+#crf_data_evaluation = Оценка данных ИРК
+crf_data_evaluation = \u041E\u0446\u0435\u043D\u043A\u0430 \u0434\u0430\u043D\u043D\u044B\u0445 \u0418\u0420\u041A
