--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -705,3 +705,6 @@ job_modification_error = \u0412\u0430\u0448\u0438 \u0438\u0437\u043c\u0435\u043d
 #field_not_a_positive_integer =  This is not a positive integer.
 #field_not_a_positive_integer = Это не положительное целое число.
 field_not_a_positive_integer = \u042d\u0442\u043e \u043d\u0435 \u043f\u043e\u043b\u043e\u0436\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0435 \u0446\u0435\u043b\u043e\u0435 \u0447\u0438\u0441\u043b\u043e\u002e
+#no_permission_to_evaluate=No permission to open crf evaluation page
+#no_permission_to_evaluate=Нет доступа к странице оценки ИРК
+no_permission_to_evaluate = \u041D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435 \u043E\u0446\u0435\u043D\u043A\u0438 \u0418\u0420\u041A
