--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
@@ -607,9 +607,7 @@ deleted = \u0443\u0434\u0430\u043b\u0435\u043d\u043e
 #unlock = unlock
 #unlock = разблокировать
 unlock = \u0440\u0430\u0437\u0431\u043b\u043e\u043a\u0438\u0440\u043e\u0432\u0430\u0442\u044c
-"## ClinCapture #86 ""Not Closed"" DN's status = "
-"## ClinCapture #86 ""Not Closed"" DN's status = "
-"# ClinCapture #86 ""Not Closed"" DN's status = "
+## ClinCapture #86
 #Not_Closed =  Not Closed
 #Not_Closed = Не закрыто
 Not_Closed = \u041d\u0435 \u0437\u0430\u043a\u0440\u044b\u0442\u043e
