Fixes #1853: Remove all hardcoded messages from Rules Studio. Submitted by Denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2301 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3676,5 +3676,120 @@ ready_for_evaluation = Ready for Evaluation
 evaluation_completed = Evaluation Completed
 evaluation_status = Evaluation Status
 
+AND = AND
+OR = OR
+NOT = NOT
+false = False
+true = True
+calculate = Calculate
+condition = Condition
+compare = Compare
+create_discrepancy = Create discrepancy
+data_import = Data Import
+execute_te_rule_upon = Execute the rule upon
+group_or_data = Group or Data
+group_data = Group / Data
+if_the_rule_evaluates_to = If the rule evaluates to
+insert_data = Insert Data
+send_email = Send Email
+target_this_rule_to = Target this rule to
+take_the_following_action_s = Take the following action(s)
+show_crf_item = Show CRF Item
+hide_crf_item = Hide CRF Item
+discrepancy_text = Discrepancy Text
+email_to = Email to
+email_message = Email message
+with_the_following_information = With the following information
+item = Item
+destination = Destination
+validate_rule = Validate Rule
+data = Data
+text = Text
+number = Number
+macros = Macros
+empty = Empty
+crfs = CRFs
+crf_versions = CRF Versions
+items = Items
+compare_or_calculate = Compare or Calculate
+compare_calculate = Compare / Calculate
+identifier = Identifier
+selectDate = Select Date
+changingStudy = Changing The Study
+keep = Keep
+clear = Clear
+
+# Rules Studio tooltips
+rs.tooltip.deleteButton = Press to clear the current rule expression
+rs.tooltip.target = Apply the rule to the selected CRF item(s). Drag and drop CRF item(s) to target the rule.  Multiple targets can be selected. To replace a target, drop another target on it.
+rs.tooltip.ruleName = Enter a description for the new rule
+rs.tooltip.left = Start grouping
+rs.tooltip.right = End grouping
+rs.tooltip.and = And...
+rs.tooltip.or = Or...
+rs.tooltip.eq = Equal
+rs.tooltip.neq = Not equal
+rs.tooltip.lt = Less than
+rs.tooltip.gt = Greater than
+rs.tooltip.lte = Less than or equal to
+rs.tooltip.gte = Greater than or equal to
+rs.tooltip.ct = Contains
+rs.tooltip.nct = Does not contain
+rs.tooltip.plus = Plus
+rs.tooltip.minus = Minus
+rs.tooltip.divide = Divide by
+rs.tooltip.mult = Multiplied by
+rs.tooltip.number = Integer and float number field
+rs.tooltip.empty = Null field
+rs.tooltip.date = Date field
+rs.tooltip.text = Text field
+rs.tooltip.currentDate = Current system date
+rs.tooltip.studiesLink = Select a study
+rs.tooltip.eventsLink = Select a study event
+rs.tooltip.crfsLink = Select an event CRF
+rs.tooltip.versionsLink = Select a CRF Version
+rs.tooltip.itemsLink = Select a CRF item
+rs.tooltip.dottedBorder = Drag and drop an item from the Group tool box, the data toolbox or a CRF item.
+rs.tooltip.item = Drag and drop a CRF item.
+rs.tooltip.eventify = Click to bind the target to the event.
+rs.tooltip.versionify = Click to bind the target to the crf version.
+rs.tooltip.linefy = Specify the line number in the repeating group to which the rule will apply
+rs.tooltip.opt = Specify target options
+rs.tooltip.removePopUp = Remove the current element from the expression
+rs.tooltip.addPopUp = Add a new box
+
+rs.message.clearExpression = Are you sure you want to clear the entire expression?
+rs.message.showHideEvaluation = Rule evaluation is not valid for a Show or Hide action. Please unselect True/False evaluation.
+rs.message.itemDoesNotExistInTheStudy = The target item does not exist in the current study.
+rs.message.serverIsNotAvailable = The server you are attempting to connect to appears to be unavailable at the moment. Please try again later.
+rs.message.enterNumber = Please enter a number
+rs.message.expressionWillBeLost = The current expression will be lost. Are you sure you want to select another study?
+rs.message.selectAnAction = A rule is supposed to fire an action. Please select the action(s) to take if the rule evaluates as intended.
+rs.message.selectWhenRun = Please specify when the rule should be run.
+rs.message.selectEvaluate = A rule is supposed to evaluate to true or false. Please specify.
+rs.message.specifyTarget = Please specify a rule target
+rs.message.specifyDescription = Please specify the rule description
+rs.message.specifyDiscrepancyText = A discrepancy action was selected but no discrepancy text has been specified.
+rs.message.specifyEmailMessage = Please provide a valid email message
+rs.message.invalidEmail = The email address is invalid. Check the email and try again.
+rs.message.selectItemsToInsert An insert action was selected but the items to insert values into are not specified.
+rs.message.selectItemsToShowHide = An show/hide action was selected but the items to show/hide are not specified.
+rs.message.invalidExpression = Cannot validate an empty or incomplete expressions.
+rs.message.invalidItemsSelected = A rule should only contain valid items in the selected study but the current rule contains invalid items that do not exist in the selected study. Fix the items to proceed.
+rs.message.checkLog = The rule was not saved! Check the server logs for details
+
+rs.validation.result = Rule validation results:
+rs.validation.valid = Rule is valid
+rs.validation.invalid = Rule is Invalid
+rs.validation.failure = Rule failure message
+rs.validation.items = CRF items affected:
+rs.validation.execution = Rule executions:
+rs.validation.action = Rule action:
+rs.validation.discrepancyAction = Discrepancy Action
+rs.validation.emailAction = Email Action
+rs.validation.insertAction = Insert Action
+rs.validation.showHideAction = Show/Hide Action
+
+
 data_entry_quality = Data Entry Quality
 crf_data_evaluation = CRF data evaluation
