Fixes #1526: CTCAE support. Submitted by Vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2308 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3636,6 +3636,11 @@ atc4 = ATC4
 atc3 = ATC3
 atc2 = ATC2
 atc1 = ATC1
+socc = SOCC
+aen = AEN
+aec = AEC
+aeg = AEG
+aegc = AEGC
 
 confirm_deletion_of_crf =  Confirm Deletion of CRF
 discrepancy_notes_affected = Discrepancy Notes Affected
