--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -6565,6 +6565,16 @@ atc2 =  ATC2
 #atc1 =  ATC1
 #atc1 =  ATC1
 atc1 =  ATC1
+#socc =  SOCC
+socc = SOCC
+#aen =  AEN
+aen = AEN
+#aec =  AEC
+aec = AEC
+#aeg =  AEG
+aeg = AEG
+#aegc =  AEGC
+aegc = AEGC
 #confirm_deletion_of_crf =   Confirm Deletion of CRF
 #confirm_deletion_of_crf = Подтвердить удаление ИРК
 confirm_deletion_of_crf = \u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u044c \u0443\u0434\u0430\u043b\u0435\u043d\u0438\u0435 \u0418\u0420\u041a
