Fixes #1537: Create new role: site-only Monitor. Submitted by hagafrank
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2314 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_en.properties
@@ -65,6 +65,7 @@ Investigator = Investigator
 Clinical_Research_Coordinator = Clinical Research Coordinator
 study_coder = Study Coder
 study_evaluator = Study Evaluator
+site_monitor = Site Monitor
 
 MSK = MSK
 
