--- a/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/terms_ru.properties
@@ -103,6 +103,9 @@ study_coder = \u041a\u043e\u0434\u0438\u0440\u043e\u0432\u0449\u0438\u043a \u041
 #study_evaluator =  Evaluator
 #study_evaluator = Оценщик
 study_evaluator = \u041e\u0446\u0435\u043d\u0449\u0438\u043a
+#site_monitor =  Site Monitor
+#site_monitor = Монитор Сайта
+site_monitor = \u041c\u043e\u043d\u0438\u0442\u043e\u0440 \u0421\u0430\u0439\u0442\u0430
 #MSK =  MSK
 #MSK =  MSK
 MSK =  MSK
