Fixes #1873: Implement the rest authentication service. Submitted by sergey
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2325 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_en.properties
@@ -449,3 +449,17 @@ trial_id_not_configured_correctly = Trial ID must be specified either on the ser
 specify_valid_trial_id = Specify a valid Trial Id to proceed.
 randomization_can_be_performer_only_at_site = Randomization can only be performed on a site.
 no_permission_to_evaluate=No permission to open crf evaluation page
+
+rest.authentication.onlyTheHttpsIsSupported=Only https communication is supported
+rest.authentication.userShouldBeAuthenticated=User should be authenticated
+rest.authentication.userIsNotAssignedToStudy=User is not assigned to study
+rest.authentication.noUserFound=No user found for specified username
+rest.authentication.wrongUserNameOrPassword=Wrong username or password specified
+rest.authentication.wrongStudyName=No study found for specified study name
+rest.authentication.emptyUsername=Username parameter is empty
+rest.authentication.emptyPassword=Password parameter is empty
+rest.authentication.emptyStudyName=Studyname parameter is empty
+rest.authentication.missingUsername=Username parameter is missing
+rest.authentication.missingPassword=Password parameter is missing
+rest.authentication.missingStudyName=Studyname parameter is missing
+rest.authentication.http404=Service unavailable
