--- a/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/exceptions_ru.properties
@@ -705,6 +705,45 @@ job_modification_error = \u0412\u0430\u0448\u0438 \u0438\u0437\u043c\u0435\u043d
 #field_not_a_positive_integer =  This is not a positive integer.
 #field_not_a_positive_integer = Это не положительное целое число.
 field_not_a_positive_integer = \u042d\u0442\u043e \u043d\u0435 \u043f\u043e\u043b\u043e\u0436\u0438\u0442\u0435\u043b\u044c\u043d\u043e\u0435 \u0446\u0435\u043b\u043e\u0435 \u0447\u0438\u0441\u043b\u043e\u002e
+#rest.authentication.onlyTheHttpsIsSupported=Only https communication is supported
+#rest.authentication.onlyTheHttpsIsSupported=Поддерживается только https протокол
+rest.authentication.onlyTheHttpsIsSupported=\u041F\u043E\u0434\u0434\u0435\u0440\u0436\u0438\u0432\u0430\u0435\u0442\u0441\u044F \u0442\u043E\u043B\u044C\u043A\u043E https \u043F\u0440\u043E\u0442\u043E\u043A\u043E\u043B
+#rest.authentication.userShouldBeAuthenticated=User should be authenticated
+#rest.authentication.userShouldBeAuthenticated=Пользователь должен быть авторизован
+rest.authentication.userShouldBeAuthenticated=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0431\u044B\u0442\u044C \u0430\u0432\u0442\u043E\u0440\u0438\u0437\u043E\u0432\u0430\u043D
+#rest.authentication.userIsNotAssignedToStudy=User is not assigned to study
+#rest.authentication.userIsNotAssignedToStudy=Пользователь должен иметь роль в исследовании
+rest.authentication.userIsNotAssignedToStudy=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0438\u043C\u0435\u0442\u044C \u0440\u043E\u043B\u044C \u0432 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u0438
+#rest.authentication.noUserFound=No user found with specified username
+#rest.authentication.noUserFound=Не найден пользователь с указанным именем
+rest.authentication.noUserFound=\u041D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C \u0441 \u0443\u043A\u0430\u0437\u0430\u043D\u043D\u044B\u043C \u0438\u043C\u0435\u043D\u0435\u043C
+#rest.authentication.wrongUserNameOrPassword=Wrong username or password specified
+#rest.authentication.wrongUserNameOrPassword=Указано неверное имя пользователя или пароль
+rest.authentication.wrongUserNameOrPassword=\u0423\u043A\u0430\u0437\u0430\u043D\u043E \u043D\u0435\u0432\u0435\u0440\u043D\u043E\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0438\u043B\u0438 \u043F\u0430\u0440\u043E\u043B\u044C
+#rest.authentication.wrongStudyName=Wrong studyname
+#rest.authentication.wrongStudyName=Неправильное название исследования
+rest.authentication.wrongStudyName=\u041D\u0435\u043F\u0440\u0430\u0432\u0438\u043B\u044C\u043D\u043E\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+#rest.authentication.emptyUsername=Username parameter is empty
+#rest.authentication.emptyUsername=Имя пользователя должно быть заполненно
+rest.authentication.emptyUsername=\u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F \u0434\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D\u043D\u043E
+#rest.authentication.emptyPassword=Password parameter is empty
+#rest.authentication.emptyPassword=Пароль должен быть заполнен
+rest.authentication.emptyPassword=\u041F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0431\u044B\u0442\u044C \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D
+#rest.authentication.emptyStudyName=Studyname parameter is empty
+#rest.authentication.emptyStudyName=Название исследования должно быть заполненно
+rest.authentication.emptyStudyName=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F \u0434\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u0437\u0430\u043F\u043E\u043B\u043D\u0435\u043D\u043D\u043E
+#rest.authentication.missingUsername=Username parameter is missing
+#rest.authentication.missingUsername=Укажите имя пользователя
+rest.authentication.missingUsername=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u0438\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+#rest.authentication.missingPassword=Password parameter is missing
+#rest.authentication.missingPassword=Укажите пароль
+rest.authentication.missingPassword=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
+#rest.authentication.missingStudyName=Studyname parameter is missing
+#rest.authentication.missingStudyName=Укажите название исследования
+rest.authentication.missingStudyName=\u0423\u043A\u0430\u0436\u0438\u0442\u0435 \u043D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0438\u0441\u0441\u043B\u0435\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+#rest.authentication.http404=Service unavailable
+#rest.authentication.http404=Сервис недоступен
+rest.authentication.http404=\u0421\u0435\u0440\u0432\u0438\u0441 \u043D\u0435\u0434\u043E\u0441\u0442\u0443\u043F\u0435\u043D
 #no_permission_to_evaluate=No permission to open crf evaluation page
 #no_permission_to_evaluate=Нет доступа к странице оценки ИРК
 no_permission_to_evaluate = \u041D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430 \u043A \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435 \u043E\u0446\u0435\u043D\u043A\u0438 \u0418\u0420\u041A
