Fixes #1904: Add missing widget's description to _ru files. Submitted by denis
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2326 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -5643,6 +5643,10 @@ enrollment_progress_widget_description = \u0412\u043a\u043b\u044e\u0447\u0435\u0
 #coding_progress_widget_description =  Coding progress.
 #coding_progress_widget_description = Кодирование.
 coding_progress_widget_description = \u041a\u043e\u0434\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435\u002e
+#evaluation_progress_widget_description = CRFs Evaluation Progress.
+#evaluation_progress_widget_description = Прогресс оценки ИРК.
+evaluation_progress_widget_description =  \u041F\u0440\u043E\u0433\u0440\u0435\u0441\u0441 \u043E\u0446\u0435\u043D\u043A\u0438 \u0418\u0420\u041A.
+
 # toolbar header
 #available_widgets =  Available Widgets
 #available_widgets = Доступные виджеты
