--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -3984,8 +3984,8 @@ crf_notes = \u0417\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f
 #open = Открытое
 open = \u041e\u0442\u043a\u0440\u044b\u0442\u043e\u0435
 #updated =  Updated
-#updated = обновлено
-updated = \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u043e
+#updated = Обновлено
+updated = \u041e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u043e
 #closed =  Closed
 #closed = Закрыт
 closed = \u0417\u0430\u043a\u0440\u044b\u0442
