Fixes #1884: Create option for study-level parameter to allow autoscheduling. Submitted by vitaly
git-svn-id: https://svn.clinovo.com/clincapture/trunk@2330 14881f01-568e-124b-961a-bb94932aa8d1

--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -7016,3 +7016,7 @@ data_entry_quality = \u041A\u0430\u0447\u0435\u0441\u0442\u0432\u043E \u0432\u04
 #crf_data_evaluation = CRF data evaluation
 #crf_data_evaluation = Оценка данных ИРК
 crf_data_evaluation = \u041E\u0446\u0435\u043D\u043A\u0430 \u0434\u0430\u043D\u043D\u044B\u0445 \u0418\u0420\u041A
+
+#allowRulesAutoScheduling = Auto-scheduling for Insert Rules
+#allowRulesAutoScheduling = Автопланирование для правил со вставкой значений
+allowRulesAutoScheduling = \u0410\u0432\u0442\u043e\u043f\u043b\u0430\u043d\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0434\u043b\u044f \u043f\u0440\u0430\u0432\u0438\u043b \u0441\u043e \u0432\u0441\u0442\u0430\u0432\u043a\u043e\u0439 \u0437\u043d\u0430\u0447\u0435\u043d\u0438\u0439
