--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_en.properties
@@ -3454,7 +3454,8 @@ systemProperty.system.language.description=This property specifies the interface
 
 systemProperty.assignRandomizationResultTo.label=Assign randomization result to
 systemProperty.assignRandomizationResultTo.description=
-systemProperty.assignRandomizationResultTo.dngroup.radioLabel=Dynamic GroupsystemProperty.assignRandomizationResultTo.ssid.radioLabel=Study Subject ID
+systemProperty.assignRandomizationResultTo.dngroup.radioLabel=Dynamic Group
+systemProperty.assignRandomizationResultTo.ssid.radioLabel=Study Subject ID
 systemProperty.assignRandomizationResultTo.none.radioLabel=Neither
 
 systemProperty.randomizationEnviroment.label=Randomization Enviroment
@@ -3798,3 +3799,5 @@ rs.validation.showHideAction = Show/Hide Action
 
 data_entry_quality = Data Entry Quality
 crf_data_evaluation = CRF data evaluation
+
+allowRulesAutoScheduling = Auto-scheduling for Insert Rules
