--- a/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
+++ b/core/src/main/resources/org/akaza/openclinica/i18n/words_ru.properties
@@ -1261,7 +1261,9 @@ double_data_entry  = \u0414\u0432\u043e\u0439\u043d\u043e\u0439 \u0432\u0432\u04
 #double_data_entry_for  =  Double Data Entry for
 #double_data_entry_for  = Двойной ввод данных для
 double_data_entry_for  = \u0414\u0432\u043e\u0439\u043d\u043e\u0439 \u0432\u0432\u043e\u0434 \u0434\u0430\u043d\u043d\u044b\u0445 \u0434\u043b\u044f
-#double_data_entry_start  =  Double Data Entry Started
+#evaluation = Evaluation
+#evaluation = Оценка
+evaluation = \u041e\u0446\u0435\u043d\u043a\u0430#double_data_entry_start  =  Double Data Entry Started
 #double_data_entry_start  = Двойной ввод данных начат
 double_data_entry_start  = \u0414\u0432\u043e\u0439\u043d\u043e\u0439 \u0432\u0432\u043e\u0434 \u0434\u0430\u043d\u043d\u044b\u0445 \u043d\u0430\u0447\u0430\u0442
 #download  =  Download
